<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:paddingTop="16dp"
    android:id="@+id/static_color_activity">

    <!-- Device Settings Tile -->
    <TextView
        android:id="@+id/device_settings_tile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/static_color_activity_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/AccentColor"
        android:textAlignment="center"
        android:paddingTop="5dp"
        android:layout_toEndOf="@+id/back_button_frame"
        android:layout_alignTop="@id/back_button_frame"
        android:layout_alignBottom="@id/back_button_frame"/>

    <!-- Back Button -->
    <FrameLayout
        android:id="@+id/back_button_frame"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/on_click_button_effect"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_go_back"
            android:contentDescription="@string/device_icon_desc"/>
    </FrameLayout>

    <!-- Container -->
    <LinearLayout
        android:id="@+id/brightnessContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/SecondaryColor"
        android:padding="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/back_button_frame">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <!-- Color wheel -->
            <com.skydoves.colorpickerview.ColorPickerView
                android:id="@+id/colorPickerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <!-- RGB values container aligned at bottom left -->
            <LinearLayout
                android:id="@+id/rgbContainer"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:padding="4dp">

                <!-- Order: R at top, G in the middle, B at bottom -->
                <TextView
                    android:id="@+id/r_value"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="4dp"
                    android:background="@color/Red"
                    android:gravity="bottom"
                    android:text="@string/r_value"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/g_value"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/Green"
                    android:gravity="bottom"
                    android:layout_marginBottom="4dp"
                    android:text="@string/g_value"
                    android:textColor="@color/SecondaryColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/b_value"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/Blue"
                    android:gravity="bottom"
                    android:text="@string/b_value"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>





        <!-- Saved Colors Section -->
        <TextView
            android:id="@+id/saved_colors_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_colors_long_press_to_save_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/AccentColor"
            android:layout_marginTop="16dp" />

        <GridLayout
            android:id="@+id/saved_colors_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="1"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/saved_color_1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:background="@drawable/rounded_background"
                android:hint="@string/save_buttons_label"
                android:textSize="12sp"
                android:textColor="@color/secondaryTextColor"
                android:gravity="center" />

            <Button
                android:id="@+id/saved_color_2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:background="@drawable/rounded_background"
                android:hint="@string/save_buttons_label"
                android:textSize="12sp"
                android:textColor="@color/secondaryTextColor"
                android:gravity="center" />

            <Button
                android:id="@+id/saved_color_3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:background="@drawable/rounded_background"
                android:hint="@string/save_buttons_label"
                android:textSize="12sp"
                android:textColor="@color/secondaryTextColor"
                android:gravity="center" />
        </GridLayout>

        <!-- Custom Hex Input Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="2dp"
            android:gravity="center_vertical">
        <TextView
            android:id="@+id/custom_color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_color_hex_label"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/AccentColor"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invalid_hex_color"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/errorColor"
            android:visibility="gone"/>
        </LinearLayout>

        <EditText
            android:id="@+id/hex_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:background="@drawable/rounded_background"
            android:padding="12dp"
            android:inputType="text"
            android:maxLength="7"
            android:text="@string/hashtag_in_EditText"
            android:textColor="@color/secondaryTextColor"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <!-- Color Preview -->
        <View
            android:id="@+id/color_preview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_background" />

        <!-- Action Button -->
        <Button
            android:id="@+id/apply_color_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_color_button"
            android:textColor="@color/primaryTextColor"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button" />
    </LinearLayout>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/SecondaryColor"
        app:itemIconTint="@color/AccentColor"
        app:itemTextColor="@color/primaryTextColor"
        app:menu="@menu/bottom_navigation_menu" />
</RelativeLayout>
